--- a/NarjisseKabbara_3_26052021/sass/style.scss
+++ b/NarjisseKabbara_3_26052021/sass/style.scss
@@ -1,5 +1,7 @@
 /***************************** GLOBAL **************************************************/
 
+/***************** VARIABLES ********************/
+
 $main-color: #9356DC;
 $main-color-lighten: lighten($main-color, 10%); 
 $main-color-lighter: #f5edff;
@@ -18,6 +20,8 @@ $font: 'Roboto', sans-serif;
 $font-title: 'Shrikhand', cursive;
 
 
+/***************** KEYFRAMES ********************/
+
 @keyframes slidein {
     from {
       transform: translate3d(0, 20px, 0);
@@ -30,22 +34,51 @@ $font-title: 'Shrikhand', cursive;
     }
   }
 
-  @keyframes spin {
-      0% {
-          transform: rotate(0deg);
-          border-top: 10px solid $main-color;
-          border-bottom: 10px solid $secondary-color;
-      }
 
-      100% {
-          transform: rotate(360deg);
-          border-top: 10px solid $secondary-color;
-          border-bottom: 10px solid $main-color;   
-      }
-      
+
+  @keyframes overflow {
+    0%{
+      overflow: hidden;
+    }
+    
+    50% {
+        overflow: hidden;
+    }
+    100% {
+       overflow: visible;
+    }
   }
+  @keyframes spin {
+    0% {
+        transform: rotate(0deg);
+        border-top: 10px solid $main-color;
+        border-bottom: 10px solid $secondary-color;
+    }
 
+    100% {
+      transform: rotate(180deg);
+      border-top: 10px solid $secondary-color;
+      border-bottom: 10px solid $main-color;   
+      
+    }
 
+}
+
+@keyframes loader {
+    0% {
+        background-color: rgba(245, 237, 255, 1);
+        
+    }
+
+    50% {
+        background-color: rgba(245, 237, 255, 1);
+        
+    }
+    100% {
+        background-color: rgba(245, 237, 255, 0);
+        
+    }
+}
 
 
 .fas, .far {
@@ -61,6 +94,8 @@ body {
     width: 100%;
     margin: 0;
     font-family: $font;
+    animation: overflow linear 2s;
+ 
 }
 
 h1 {
@@ -102,32 +137,26 @@ a {
     text-decoration: none;
 }
 
-a:hover, a:focus, a:active {
-   
-}
 
 .loader {
     height: 100%;
-    width: 100%;
-    background-color: #f5edff;
+    width: 100%;  
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
      top: 0; left: 0; bottom: 0; right: 0;
     z-index: 2;
+    animation: loader 3s ease;
 }
+
 .chargement {
-    border-top: 10px solid $main-color;
-    border-bottom: 10px solid $secondary-color;
     border-radius: 50%;
     width: 100px;
     height: 100px;
-    // margin: auto;
-    // position: absolute;
-    // top: 0; left: 0; bottom: 0; right: 0;
-    animation: spin 2s linear infinite;
+    animation: spin 1s linear 2 ;
 }
+
 
 @media all and (max-device-width: 480px) {}
 
@@ -365,7 +394,6 @@ header {
 /***************************** FOOTER **************************************************/
 
 footer {
-    // height: 200px;
     background: $footer;
     color: #fff;
 }
@@ -502,7 +530,7 @@ footer {
             position: absolute;
             bottom: -5px;
             left: 0;
-            width: 12%;
+            width: 40px;
             height: 2px;
             background: $tertiary-color;
             transition: ease-in-out 0.5s;
@@ -562,12 +590,6 @@ footer {
             }
         }
     }
-}
-
-
-.cardContainer {
-    
-
 }
 
 
@@ -646,6 +668,7 @@ footer {
 
 /************** ACCORDEON **************/
 
+/***********
 #menuContainer {
     height: auto;
     margin: 0 auto;
@@ -769,4 +792,57 @@ input#to {
     position: relative;
   }
 
-  /*************************/
+**************/
+
+
+
+/********************************** IPAD AND DESKTOP ***********************************************/
+
+
+
+  @media screen and (min-width: 765px) {
+
+    .menu {
+        padding: 40px 20% 20px 20%;
+    }
+    .menuLike {
+        right: 25%;
+    }
+    .menuContent, .restaurant, .howtoContainer {
+        padding: 20px 20%;
+    }
+
+    .howtoCard {
+        width: 100%;
+    }
+    .howtoNumber {
+        left: 20%;
+    }
+
+    .restaurantContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+        margin: 0;
+    }
+
+    .restau {
+        width: 100%;
+    }
+
+    .menuFooter{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        ul {
+            display: flex;            
+        }
+
+        li {
+            padding: 0 20px;
+        }
+    }
+
+
+}
