--- a/NarjisseKabbara_3_26052021/sass/style.scss
+++ b/NarjisseKabbara_3_26052021/sass/style.scss
@@ -34,8 +34,6 @@ $font-title: 'Shrikhand', cursive;
     }
   }
 
-
-
   @keyframes overflow {
     0%{
       overflow: hidden;
@@ -76,6 +74,7 @@ $font-title: 'Shrikhand', cursive;
     }
     100% {
         background-color: rgba(245, 237, 255, 0);
+        z-index: -1;
         
     }
 }
