--- a/NarjisseKabbara_3_26052021/sass/style.scss
+++ b/NarjisseKabbara_3_26052021/sass/style.scss
@@ -46,6 +46,7 @@ $font-title: 'Shrikhand', cursive;
        overflow: visible;
     }
   }
+
   @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -57,7 +58,6 @@ $font-title: 'Shrikhand', cursive;
       transform: rotate(180deg);
       border-top: 10px solid $secondary-color;
       border-bottom: 10px solid $main-color;   
-      
     }
 
 }
@@ -65,16 +65,23 @@ $font-title: 'Shrikhand', cursive;
 @keyframes loader {
     0% {
         background-color: rgba(245, 237, 255, 1);
-        
+        position: absolute;
+        top: 0; left: 0; bottom: 0; right: 0;
+        height: 100%;
     }
 
-    50% {
+    75% {
         background-color: rgba(245, 237, 255, 1);
-        
+        position: absolute;
+        top: 0; left: 0; bottom: 0; right: 0;
+        height: 100%;   
     }
+
+    
     100% {
         background-color: rgba(245, 237, 255, 0);
-        z-index: -1;
+        position: absolute;
+    
         
     }
 }
@@ -136,16 +143,15 @@ a {
     text-decoration: none;
 }
 
+/*********** LOADER ***********/
 
 .loader {
-    height: 100%;
+    z-index: 2;
+    height: 0;
     width: 100%;  
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-     top: 0; left: 0; bottom: 0; right: 0;
-    z-index: 2;
     animation: loader 3s ease;
 }
 
