--- a/NarjisseKabbara_3_26052021/sass/style.scss
+++ b/NarjisseKabbara_3_26052021/sass/style.scss
@@ -146,7 +146,7 @@ a {
 /*********** LOADER ***********/
 
 .loader {
-    z-index: 2;
+    z-index: 2;!important
     height: 0;
     width: 100%;  
     display: flex;
@@ -178,7 +178,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: -1;
+    z-index: 1;
 }
 /***************************** LOCALISATION **************************************************/
 .localisationContainer {
@@ -187,8 +187,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $localisation-color; 
-    z-index: -2;  
+    color: $localisation-color;   
 
     .fas {
         color: $localisation-color;   
@@ -264,7 +263,6 @@ header {
     cursor: pointer;
     box-shadow: 5px 10px 20px 1px #b5b5b5;
     transition: all .2s;
-    z-index: -1;
 
     a {
         color: #000;;
@@ -283,7 +281,6 @@ header {
     padding: 5px 10px ;
     position: absolute;
     left: 30px;
-    z-index: -2;
 }
 
 .howtoText {
